Add "ender bot" to Projects

--- a/index.html
+++ b/index.html
@@ -111,6 +111,13 @@
                     <span uk-icon="icon: link">
                     </span> Website</a>
             </div>
+            <div class="uk-margin uk-card uk-card-secondary uk-card-body ">
+                <h4>Ender Bot</h4>
+                <p>A Fortnite bot to get news, map etc. from Fortnite. Join it's <a href="https://discord.gg/PXb6dq3sas">main server</a> for item shop reminders, item shop images, leaks and news.</p>
+                <a class="uk-button-text uk-text-decoration-none" href="https://discord.com/api/oauth2/authorize?client_id=997439539545116672&permissions=8&scope=applications.commands%20bot" target="_blank">
+                    <span uk-icon="icon: link">
+                    </span> Add to Discord</a>
+            </div>
         </div>
         <br>
     </div>
