--- a/index.html
+++ b/index.html
@@ -2,137 +2,186 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/uikit.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="js/uikit.js"></script>
-    <script src="js/uikit-icons.js"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Burak</title>
+    <script src="https://kit.fontawesome.com/a6c9a7a3a0.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic"
+        rel="stylesheet" type="text/css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css"
+        rel="stylesheet" />
+    <link href="css/creative.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
+
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <meta property="og:url" content="https://burakyhs.me/" />
+    <meta name="image" property="og:image" content="assets/avatar.png" />
+    <meta property="og:image:alt" content="A Deep Dreamed view of the Middlesex Fells Reservoir in Medford, MA" />
+    <meta property="g:locale" content="en_US" />
+    <meta property="og:type" content="website" />
+    <meta property="og:author" content="Burak" />
+    <meta property="og:title" content="Burak's Personal Website" />
+    <meta property="og:description"
+        content="This is my Personal Website. Check out my work, creations and about me." />
+
+    <meta name="description"
+        content="This is my Personal Website. Check out my work, creations and about me.">
+
 </head>
 
-<body>
-    <nav class="uk-navbar-container uk-margin-small-left uk-margin-small-right uk-visible@m uk-margin-xlarge-left uk-margin-xlarge-right"
-        uk-navbar uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky">
-
-        <div class="uk-navbar-left">
-            <a href="" class="uk-navbar-item uk-logo uk-light">Burak</a>
-        </div>
-        <div class="uk-navbar-right">
-
-            <ul class="uk-navbar-nav uk-light">
-                <li><a class="uk-button-text uk-text-capitalize" href="#about" uk-scroll>About</a></li>
-                <li><a class="uk-button-text uk-text-capitalize" href="#projects" uk-scroll>Projects</a></li>
-                <li><a class="uk-button-text uk-text-capitalize" href="#contact" uk-scroll>Contact</a></li>
-                <li><a class="uk-button-text uk-text-capitalize"
-                        href="https://github.com/BurakYs/burakys.github.io">Source Code</a></li>
-
-            </ul>
-
+<body id="page-top">
+    <nav class="navbar navbar-expand-lg bg-black fixed-top" id="mainNav">
+        <div class="container">
+            <a class="navbar-brand js-scroll-trigger" style="color: #d1cdc7 !important" href="#page-top">Burak</a>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+                data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a style="color: #d1cdc7 !important" class="nav-link js-scroll-trigger"
+                            href="#page-top">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a style="color: #d1cdc7 !important" class="nav-link js-scroll-trigger" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a style="color: #d1cdc7 !important" class="nav-link js-scroll-trigger"
+                            href="#education">Education</a>
+                    </li>
+                    <li class="nav-item">
+                        <a style="color: #d1cdc7 !important" class="nav-link js-scroll-trigger" href="#work">Work</a>
+                    </li>
+                    <li class="nav-item">
+                        <a style="color: #d1cdc7 !important" class="nav-link js-scroll-trigger"
+                            href="https://github.com/BurakYs" target="_blank">GitHub</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
-    <nav class="uk-navbar-container uk-margin-small-left uk-margin-small-right uk-hidden@m uk-margin-xlarge-left uk-margin-xlarge-right"
-        uk-navbar uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky">
-
-        <div class="uk-navbar-left">
-            <a href="" class="uk-navbar-item uk-logo uk-light">Burak</a>
-        </div>
-        <div class="uk-navbar-right">
-
-            <ul class="uk-navbar-nav uk-light">
-                <li><button uk-toggle="target: #offcanvas-nav" type="button" uk-navbar-toggle-icon></button></li>
-
-            </ul>
-
-        </div>
-    </nav>
-    <div id="offcanvas-nav" uk-offcanvas="overlay: true">
-        <div class="uk-offcanvas-bar uk-flex uk-flex-column">
-
-            <ul class="uk-nav uk-nav-primary uk-nav-center uk-margin-auto-vertical">
-                <li class="uk-active"><a href="#" uk-scroll>Home</a></li>
-                <li class="uk-active"><a href="#about" uk-scroll>About</a></li>
-                <li class="uk-active"><a href="#projects" uk-scroll>Projects</a></li>
-                <li class="uk-active"><a href="mailto:">Contact</a></li>
-
-            </ul>
-        </div>
-    </div>
-    <div class="uk-margin-small-left uk-margin-small-right uk-margin-xlarge-top uk-margin-xlarge-bottom">
-        <h1 class="uk-margin-xlarge-left uk-light uk-text-left uk-margin-xlarge-right">I'm Burak, a web and bot
-            developer.</h1>
-        <a href="#about" class="uk-margin-xlarge-left uk-text-capitalize uk-button uk-button-secondary" uk-scroll>About
-            Me</a>
-
-
-    </div>
-    <br>
-
-
-    <hr class="uk-margin-xlarge-top uk-margin-xlarge-left uk-margin-xlarge-right">
-    <div id="about" class="uk-margin-small-left uk-margin-small-right uk-margin-xlarge-top uk-margin-xlarge-bottom"
-        style="padding-top: 10%;">
-        <h3 class="uk-margin-xlarge-left uk-light">About Me</h3>
-        <p class="uk-margin-xlarge-left uk-margin-xlarge-right">Hi, I'm Burak. I'm a student in Turkey, I am a
-            self-taught coder with experience in HTML, CSS and JavaScript. I have been coding for several years now and
-            I'm always looking to learn more languages so that I can broaden my skill set even further. With each
-            language comes a unique way of thinking about problems which helps me become better at problem solving as
-            well as making sure my code is efficient and secure. </p>
-        <!--TODO: UPDATE THIS SHITTY ABOUT ME LATER-->
-        <a href="https://discord.com/users/678993693088415764" class="uk-margin-xlarge-left uk-light uk-button-text"
-            uk-icon="discord" target="_blank"></a> &nbsp;
-        <!--<a href="" class="uk-light uk-button-text" uk-icon="" target="_blank"></a> &nbsp;-->
-        <a href="https://github.com/BurakYs" class="uk-button-text uk-light" uk-icon="github" target="_blank"></a>
-        &nbsp;
-        <!--<a href="" class="uk-light uk-button-text" uk-icon="" target="_blank"></a>-->
-    </div>
-
-    <hr class="uk-margin-xlarge-left uk-margin-xlarge-right">
-    <div id="projects" class="uk-margin-small-left uk-margin-small-right uk-margin-xlarge-top uk-margin-xlarge-bottom"
-        style="padding-top: 10%;">
-        <h3 class="uk-margin-xlarge-left uk-light">Projects</h3>
-        <p class="uk-margin-xlarge-left">Projects that I've been working on</p>
-
-        <div class="uk-margin-xlarge-left uk-margin-xlarge-right">
-            <div class="uk-margin uk-card uk-card-secondary uk-card-body ">
-                <h4>Maichi</h4>
-                <p>Maichi is a multi-purpose Discord bot. You can manage your server easily with advanced commands. This
-                    bot has systems like: levelling, reaction roles, giveaways, triggers, tickets and more.</p>
-                <a class="uk-button-text uk-text-decoration-none" href="https://maichi.cf/invite" target="_blank">
-                    <span uk-icon="icon: link">
-                    </span> Add to Discord</a>
-            </div>
-            <div class="uk-margin uk-card uk-card-secondary uk-card-body ">
-                <h4>Maichi Website</h4>
-                <p>This website is Maichi's website. You can learn anything you want to know from this website and
-                    manage the bot from the dashboard.</p>
-                <a class="uk-button-text uk-text-decoration-none" href="https://maichi.cf/" target="_blank">
-                    <span uk-icon="icon: link">
-                    </span> Website</a>
-            </div>
-            <div class="uk-margin uk-card uk-card-secondary uk-card-body ">
-                <h4>Ender Bot</h4>
-                <p>A Fortnite bot to get news, map etc. from Fortnite. Join it's <a href="https://discord.gg/PXb6dq3sas">main server</a> for item shop reminders, item shop images, leaks and news.</p>
-                <a class="uk-button-text uk-text-decoration-none" href="https://discord.com/api/oauth2/authorize?client_id=997439539545116672&permissions=8&scope=applications.commands%20bot" target="_blank">
-                    <span uk-icon="icon: link">
-                    </span> Add to Discord</a>
+    <header class="masthead text-center text-black d-flex">
+        <div class="container my-auto">
+            <div class="row">
+                <div class="col-lg-10 mx-auto">
+                    <h1 class="text-uppercase text-white">
+                        <strong>Burak</strong>
+                    </h1>
+                    <hr class="divider my-4" />
+                </div>
+                <div class="col-lg-8 mx-auto">
+                    <p class="text-faded text-white mb-5">Back-End Developer, Gamer</p>
+                    <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More!</a>
+                </div>
             </div>
         </div>
-        <br>
-    </div>
-    <hr class="uk-margin-xlarge-left uk-margin-xlarge-right">
-    <div id="contact" class="uk-margin-small-left uk-margin-small-right uk-margin-xlarge-top uk-margin-xlarge-bottom">
-        <h3 class="uk-margin-xlarge-left uk-light">Contact</h3>
-        <p class="uk-margin-xlarge-left uk-margin-xlarge-right">You can contact me on these platforms: <a
-                href="https://discord.com/users/678993693088415764" class="uk-light" uk-icon="discord"
-                target="_blank"></a> <a href="https://twitter.com/@BurakYhs0" class="uk-light" uk-icon="twitter"
-                target="_blank"></a> <a href="mailto:burakyhs@duck.com" class="uk-light" uk-icon="mail"
-                target="_blank"></a></p>
-    </div>
+    </header>
+    <section class="page-section">
+        <div class="container-fluid p-0">
+            <div class="row no-gutters" style="display: flex; justify-content: center;">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading text-white" id="about">About Me</h2>
+                    <hr class="divider my-4" />
+                </div>
+                <div class="col-lg-7">
+                    <p class="text-white">Hi, I'm Burak. I'm a student in Turkey, I am a self-taught coder with
+                        experience in HTML, CSS and JavaScript. I have been coding for several years now and I'm always
+                        looking to learn more languages so that I can broaden my skill set even further. With each
+                        language comes a unique way of thinking about problems which helps me become better at problem
+                        solving as well as making sure my code is efficient and secure.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="page-section bg-primary">
+        <div class="container-fluid">
+            <div class="row justify-content-center">
+                <div class="col-lg-8 mx-auto text-center mb-4">
+                    <h2 class="section-heading text-white" id="education">Education</h2>
+                    <hr class="divider black my-4" />
+                </div>
+            </div>
+            <div class="row" style="display: flex; justify-content: center;">
+                <!--<div class="col-lg-3 col-md-6 col-sm-6 text-center mb-4">
+                    <i class="fa fa-4x fa-id-card-o text-faded text-white sr-icons"></i>
+                    <h3 class="text-white">Degree</h3>
+                    <p class="text-faded text-white">Bachelor of Science in Computer Science from<br />
+                        <a class="text-white-link" href="https://www.uml.edu/" class="text-blue">UMass Lowell</a>
+                    </p>
+                </div>
 
-    <hr class="uk-margin-xlarge-left uk-margin-xlarge-right">
-    </div>
+                <div class="col-lg-3 col-md-6 col-sm-6 text-center div-padding-fix mb-4">
+                    <i class="fa fa-4x fa-graduation-cap text-faded text-white sr-icons"></i>
+                    <h3 class="text-white">Graduation</h3>
+                    <p class="text-faded text-white">Graduated with a 3.4 GPA & Latin Honors</p>
+                </div>-->
+
+                <div class="col-lg-3 col-md-6 col-sm-6 text-center mb-4">
+                    <i class="fa fa-4x fa-code text-faded text-white sr-icons"></i>
+                    <h3 class="text-white">Languages</h3>
+                    <p class="text-faded no-margin text-white">Python, JavaScript, C++</p>
+                    <p class="text-faded text-white">HTML5 (HTML/CSS/JS)</p>
+                </div>
+
+                <div class="col-lg-3 col-md-6 col-sm-6 text-center mb-4">
+                    <i class="fa fa-4x fa-file-code-o text-faded text-white sr-icons"></i>
+                    <h3 class="text-white">Skills</h3>
+                    <p class="text-faded text-white">HTML5 / Svelte / Back-end</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 text-center">
+                    <a class="btn btn-black btn-xl js-scroll-trigger" href="#work">Wait There's More!</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="page-section">
+        <div class="container-fluid p-0">
+            <div class="row no-gutters" style="display: flex; justify-content: center;">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading text-white" id="work">Work</h2>
+                    <hr class="divider my-4" />
+                </div>
+                <div class="col-lg-3 col-sm-6 text-center">
+                    <i class="fa fa-4x fa-rocket text-primary sr-icons"></i>
+                    <h3 class="mt-4 mb-4 text-white">Software Developer</h3>
+                    <p class="text-white">Coding from 2019 to Present</p>
+                </div>
+                <div class="col-lg-3 col-sm-6 text-center">
+                    <i class="fa fa-4x fa-fighter-jet text-primary sr-icons"></i>
+                    <h3 class="mt-4 mb-4 text-white">System Engineer</h3>
+                    <p class="text-white">Placeholder</p>
+                </div>
+                <!--<div class="col-lg-3 col-sm-6 text-center">
+                    <i class="fa fa-4x fa-truck text-primary sr-icons"></i>
+                    <h3 class="mt-4 mb-4 text-white">Software Developer</h3>
+                    <p class="text-white">July 2017 to April 2018: Creative Logistics Solutions (CLS)</p>
+                </div>
+                <div class="col-lg-3 col-sm-6 text-center">
+                    <i class="fa fa-4x fa-android text-primary sr-icons"></i>
+                    <i class="fa fa-4x fa-server text-primary sr-icons ml-4"></i>
+                    <h3 class="mt-4 mb-4 text-white">Technical Intern</h3>
+                    <p class="text-muted mb-4">Summer 2015 & 2016</p>
+                </div>-->
+            </div>
+        </div>
+    </section>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+    <script src="js/creative.js"></script>
+
+    <script>
+        document.getElementById("copyright-year").innerHTML = new Date().getFullYear();
+    </script>
+
 </body>
 
 </html>
