make the navbar more responsive

--- a/index.html
+++ b/index.html
@@ -21,12 +21,10 @@
     <meta property="g:locale" content="en_US" />
     <meta property="og:type" content="website" />
     <meta property="og:author" content="Burak" />
-    <meta property="og:title" content="Burak's Personal Website" />
-    <meta property="og:description"
-        content="This is my Personal Website. Check out my work, creations and about me." />
+    <meta property="og:title" content="Burak" />
+    <meta property="og:description" content="This is my Personal Website. Check out my work, creations and about me." />
 
-    <meta name="description"
-        content="This is my Personal Website. Check out my work, creations and about me.">
+    <meta name="description" content="This is my Personal Website. Check out my work, creations and about me.">
 
 </head>
 
@@ -37,7 +35,17 @@
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span>
+                    <div class="line_1">
+                        <p style="font-size: 0px;">a</p>
+                    </div>
+                    <div class="line_2">
+                        <p style="font-size: 0px;">a</>
+                    </div>
+                    <div class="line_3">
+                        <p style="font-size: 0px;">a</p>
+                    </div>
+                </span>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
