--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
                         <a style="color: #d1cdc7 !important" class="nav-link js-scroll-trigger" href="#work">Work</a>
                     </li>
                     <li class="nav-item">
+                        <a style="color: #d1cdc7 !important" class="nav-link js-scroll-trigger" href="#fun">Fun</a>
+                    </li>
+                    <li class="nav-item">
                         <a style="color: #d1cdc7 !important" class="nav-link js-scroll-trigger"
                             href="https://github.com/BurakYs" target="_blank">GitHub</a>
                     </li>
@@ -129,14 +132,14 @@
 
                 <div class="col-lg-3 col-md-6 col-sm-6 text-center mb-4">
                     <i class="fa fa-4x fa-code text-faded text-white sr-icons"></i>
-                    <h3 class="text-white">Languages</h3>
+                    <h3 class="text-white mt-2">Languages</h3>
                     <p class="text-faded no-margin text-white">Python, JavaScript, C++</p>
                     <p class="text-faded text-white">HTML5 (HTML/CSS/JS)</p>
                 </div>
 
                 <div class="col-lg-3 col-md-6 col-sm-6 text-center mb-4">
                     <i class="fa fa-4x fa-file-code-o text-faded text-white sr-icons"></i>
-                    <h3 class="text-white">Skills</h3>
+                    <h3 class="text-white mt-2">Skills</h3>
                     <p class="text-faded text-white">HTML5 / Svelte / Back-end</p>
                 </div>
             </div>
@@ -177,6 +180,60 @@
                     <h3 class="mt-4 mb-4 text-white">Technical Intern</h3>
                     <p class="text-muted mb-4">Summer 2015 & 2016</p>
                 </div>-->
+            </div>
+        </div>
+    </section>
+    <section class="page-section bg-green">
+        <div class="container-fluid">
+            <div class="row images-vcenter">
+                <div class="col-lg-12 pb-3 text-center">
+                    <h2 class="section-heading text-white" id="fun">My Favorite Songs</h2>
+                    <hr class="divider black my-4" />
+                </div>
+                <div class="col-lg-3 col-sm-6 text-center">
+                    <a class="href-black"
+                        href="https://open.spotify.com/track/2LKOHdMsL0K9KwcPRlJK2v?si=b57743680e5c4508">
+                        <img src="https://i.scdn.co/image/ab67616d00001e02b492477206075438e0751176" class="image-size"
+                            alt="After Dark">
+                    </a>
+                    <h3 class="mt-4">After Dark</h3>
+                    <h6 class="mt-2">Mr. Kitty</h6>
+                </div>
+
+                <div class="col-lg-3 col-sm-6 text-center">
+                    <a class="href-black"
+                        href="https://open.spotify.com/track/0l2Ob0zMIQ21gJn642HyQ1?si=063ac63419d04caa">
+                        <img src="https://i.scdn.co/image/ab67616d00001e02fbca5df3ed1da054c0391957" class="image-size"
+                            alt="0% Angel">
+                    </a>
+                    <h3 class="mt-4">0% Angel</h3>
+                    <h6 class="mt-2">Mr. Kitty</h6>
+                </div>
+
+                <div class="col-lg-3 col-sm-6 text-center">
+                    <a class="href-black"
+                        href="https://open.spotify.com/track/2ksyzVfU0WJoBpu8otr4pz?si=444bd8b148f34c1c">
+                        <img src="https://i.scdn.co/image/ab67616d00001e02b852a616ae3a49a1f6b0f16e" class="image-size"
+                            alt="Metamorphosis">
+                    </a>
+                    <h3 class="mt-4">Metamorphosis</h3>
+                    <h6 class="mt-2">Interworld</h6>
+                </div>
+
+                <div class="col-lg-3 col-sm-6 text-center">
+                    <a class="href-black"
+                        href="https://open.spotify.com/track/2K7xn816oNHJZ0aVqdQsha?si=71b28235f62744c9">
+                        <img src="https://i.scdn.co/image/ab67616d00001e029b6ac98a52f62d5cb473da40" class="image-size"
+                            alt="Softcore">
+                    </a>
+                    <h3 class="mt-4">Softcore</h3>
+                    <h6 class="mt-2">The Neighbourhood</h6>
+                </div>
+            </div>
+            <div class="text-center">
+                <a class="btn btn-black btn-xl js-scroll-trigger mt-2"
+                    href="https://github.com/BurakYs/BurakYs.github.io">
+                    Cool, show me the code</a>
             </div>
         </div>
     </section>
