--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 
 <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Burak</title>
     <script src="https://kit.fontawesome.com/a6c9a7a3a0.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
@@ -13,7 +14,6 @@
         rel="stylesheet" />
     <link href="css/creative.css" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet">
-
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <meta property="og:url" content="https://burakyhs.me/" />
     <meta name="image" property="og:image" content="assets/avatar.png" />
@@ -23,9 +23,7 @@
     <meta property="og:author" content="Burak" />
     <meta property="og:title" content="Burak" />
     <meta property="og:description" content="This is my Personal Website. Check out my work, creations and about me." />
-
     <meta name="description" content="This is my Personal Website. Check out my work, creations and about me.">
-
 </head>
 
 <body id="page-top">
