update favorite songs

--- a/index.html
+++ b/index.html
@@ -192,42 +192,42 @@
                 </div>
                 <div class="col-lg-3 col-sm-6 text-center">
                     <a class="href-black"
-                        href="https://open.spotify.com/track/2LKOHdMsL0K9KwcPRlJK2v?si=b57743680e5c4508">
-                        <img src="https://i.scdn.co/image/ab67616d00001e02b492477206075438e0751176" class="image-size"
-                            alt="After Dark">
-                    </a>
-                    <h3 class="mt-4">After Dark</h3>
-                    <h6 class="mt-2">Mr. Kitty</h6>
-                </div>
-
-                <div class="col-lg-3 col-sm-6 text-center">
-                    <a class="href-black"
-                        href="https://open.spotify.com/track/0l2Ob0zMIQ21gJn642HyQ1?si=063ac63419d04caa">
-                        <img src="https://i.scdn.co/image/ab67616d00001e02fbca5df3ed1da054c0391957" class="image-size"
-                            alt="0% Angel">
-                    </a>
-                    <h3 class="mt-4">0% Angel</h3>
-                    <h6 class="mt-2">Mr. Kitty</h6>
-                </div>
-
-                <div class="col-lg-3 col-sm-6 text-center">
-                    <a class="href-black"
-                        href="https://open.spotify.com/track/2ksyzVfU0WJoBpu8otr4pz?si=444bd8b148f34c1c">
-                        <img src="https://i.scdn.co/image/ab67616d00001e02b852a616ae3a49a1f6b0f16e" class="image-size"
-                            alt="Metamorphosis">
-                    </a>
-                    <h3 class="mt-4">Metamorphosis</h3>
-                    <h6 class="mt-2">Interworld</h6>
-                </div>
-
-                <div class="col-lg-3 col-sm-6 text-center">
-                    <a class="href-black"
                         href="https://open.spotify.com/track/2K7xn816oNHJZ0aVqdQsha?si=71b28235f62744c9">
                         <img src="https://i.scdn.co/image/ab67616d00001e029b6ac98a52f62d5cb473da40" class="image-size"
                             alt="Softcore">
                     </a>
                     <h3 class="mt-4">Softcore</h3>
                     <h6 class="mt-2">The Neighbourhood</h6>
+                </div>
+
+                <div class="col-lg-3 col-sm-6 text-center">
+                    <a class="href-black"
+                        href="https://open.spotify.com/track/1CPSRRXGTQVgc1DIRWmLcg?si=da5f26f3728049f1">
+                        <img src="https://i.scdn.co/image/ab67616d00001e021d0a0f4f00b8c33218c7c585" class="image-size"
+                            alt="Wasted">
+                    </a>
+                    <h3 class="mt-4">Wasted</h3>
+                    <h6 class="mt-2">Murkish, Huken</h6>
+                </div>
+
+                <div class="col-lg-3 col-sm-6 text-center">
+                    <a class="href-black"
+                        href="https://open.spotify.com/track/0PXp9QxBfSKGGpWUNaws2X?si=2575ba07aeae4f86">
+                        <img src="https://i.scdn.co/image/ab67616d00001e021b6c184bddb35dac93822101" class="image-size"
+                            alt="Drama">
+                    </a>
+                    <h3 class="mt-4">Drama</h3>
+                    <h6 class="mt-2">Roy Woods, Drake</h6>
+                </div>
+
+                <div class="col-lg-3 col-sm-6 text-center">
+                    <a class="href-black"
+                        href="https://open.spotify.com/track/0l2Ob0zMIQ21gJn642HyQ1?si=2f61b57863ee404f">
+                        <img src="https://i.scdn.co/image/ab67616d00001e02fbca5df3ed1da054c0391957" class="image-size"
+                            alt="0% Angel">
+                    </a>
+                    <h3 class="mt-4">0% Angel</h3>
+                    <h6 class="mt-2">Mr. Kitty</h6>
                 </div>
             </div>
             <div class="text-center">
