--- a/index.html
+++ b/index.html
@@ -114,20 +114,6 @@
                 </div>
             </div>
             <div class="row" style="display: flex; justify-content: center;">
-                <!--<div class="col-lg-3 col-md-6 col-sm-6 text-center mb-4">
-                    <i class="fa fa-4x fa-id-card-o text-faded text-white sr-icons"></i>
-                    <h3 class="text-white">Degree</h3>
-                    <p class="text-faded text-white">Bachelor of Science in Computer Science from<br />
-                        <a class="text-white-link" href="https://www.uml.edu/" class="text-blue">UMass Lowell</a>
-                    </p>
-                </div>
-
-                <div class="col-lg-3 col-md-6 col-sm-6 text-center div-padding-fix mb-4">
-                    <i class="fa fa-4x fa-graduation-cap text-faded text-white sr-icons"></i>
-                    <h3 class="text-white">Graduation</h3>
-                    <p class="text-faded text-white">Graduated with a 3.4 GPA & Latin Honors</p>
-                </div>-->
-
                 <div class="col-lg-3 col-md-6 col-sm-6 text-center mb-4">
                     <i class="fa fa-4x fa-code text-faded text-white sr-icons"></i>
                     <h3 class="text-white mt-2">Languages</h3>
@@ -167,17 +153,6 @@
                     <h3 class="mt-4 mb-4 text-white">System Engineer</h3>
                     <p class="text-white">Placeholder</p>
                 </div>
-                <!--<div class="col-lg-3 col-sm-6 text-center">
-                    <i class="fa fa-4x fa-truck text-primary sr-icons"></i>
-                    <h3 class="mt-4 mb-4 text-white">Software Developer</h3>
-                    <p class="text-white">July 2017 to April 2018: Creative Logistics Solutions (CLS)</p>
-                </div>
-                <div class="col-lg-3 col-sm-6 text-center">
-                    <i class="fa fa-4x fa-android text-primary sr-icons"></i>
-                    <i class="fa fa-4x fa-server text-primary sr-icons ml-4"></i>
-                    <h3 class="mt-4 mb-4 text-white">Technical Intern</h3>
-                    <p class="text-muted mb-4">Summer 2015 & 2016</p>
-                </div>-->
             </div>
         </div>
     </section>
@@ -190,38 +165,35 @@
                 </div>
                 <div class="col-lg-3 col-sm-6 text-center">
                     <a class="href-black"
-                        href="https://open.spotify.com/track/2K7xn816oNHJZ0aVqdQsha?si=71b28235f62744c9">
-                        <img src="https://i.scdn.co/image/ab67616d00001e029b6ac98a52f62d5cb473da40" class="image-size"
-                            alt="Softcore">
+                        href="https://open.spotify.com/track/7BbaIYAdi3pg4MGl6PHwPv?si=07a413b9e72d414f">
+                        <img src="https://i.scdn.co/image/ab67616d00001e02b20fdc3ee4c262693cfdf005" class="image-size"
+                            alt="Monëy so big">
                     </a>
-                    <h3 class="mt-4">Softcore</h3>
-                    <h6 class="mt-2">The Neighbourhood</h6>
+                    <h3 class="mt-4">Monëy so big</h3>
+                    <h6 class="mt-2">Yeat</h6>
                 </div>
-
                 <div class="col-lg-3 col-sm-6 text-center">
                     <a class="href-black"
-                        href="https://open.spotify.com/track/1CPSRRXGTQVgc1DIRWmLcg?si=da5f26f3728049f1">
-                        <img src="https://i.scdn.co/image/ab67616d00001e021d0a0f4f00b8c33218c7c585" class="image-size"
-                            alt="Wasted">
+                        href="https://open.spotify.com/track/1a019wP7IdYLexwbmfZPm3?si=641ff6baf22348d6">
+                        <img src="https://i.scdn.co/image/ab67616d00001e027aee5b36a3a60ca926bc429b" class="image-size"
+                            alt="Flawlëss">
                     </a>
-                    <h3 class="mt-4">Wasted</h3>
-                    <h6 class="mt-2">Murkish, Huken</h6>
+                    <h3 class="mt-4">Flawlëss</h3>
+                    <h6 class="mt-2">Yeat, Lil Uzi, Vert</h6>
                 </div>
-
                 <div class="col-lg-3 col-sm-6 text-center">
                     <a class="href-black"
-                        href="https://open.spotify.com/track/0PXp9QxBfSKGGpWUNaws2X?si=2575ba07aeae4f86">
-                        <img src="https://i.scdn.co/image/ab67616d00001e021b6c184bddb35dac93822101" class="image-size"
-                            alt="Drama">
+                        href="https://open.spotify.com/track/2LKOHdMsL0K9KwcPRlJK2v?si=a64248f03de047b9">
+                        <img src="https://i.scdn.co/image/ab67616d00001e02b492477206075438e0751176" class="image-size"
+                            alt="After Dark">
                     </a>
-                    <h3 class="mt-4">Drama</h3>
-                    <h6 class="mt-2">Roy Woods, Drake</h6>
+                    <h3 class="mt-4">After Dark</h3>
+                    <h6 class="mt-2">Mr. Kitty</h6>
                 </div>
-
                 <div class="col-lg-3 col-sm-6 text-center">
                     <a class="href-black"
                         href="https://open.spotify.com/track/0l2Ob0zMIQ21gJn642HyQ1?si=2f61b57863ee404f">
-                        <img src="https://i.scdn.co/image/ab67616d00001e02fbca5df3ed1da054c0391957" class="image-size"
+                        <img src="https://i.scdn.co/image/ab67616d00001e02b492477206075438e0751176" class="image-size"
                             alt="0% Angel">
                     </a>
                     <h3 class="mt-4">0% Angel</h3>
