--- a/spitfire/index.html
+++ b/spitfire/index.html
@@ -5,10 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url=https://rookie-spitfire.cf/" />
 </head>
 
 <body>
+<h1>Redirecting...</h1>
+<script>
+    window.location.replace("https://rookie-spitfire.cf/");
+</script>
 
 </body>
 
